# pyMARS

./: .buildinfo  .coveragerc  .doctr-files  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CITATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.md~  README.txt  RELEASING.md  __main__.py  autoignition_module.py  azure-pipelines.yml  build-environment.yaml  cantera dev note.txt  chemkin_user_prompt.py  compile.py  convert_chemkin_file.py  create_trimmed_model.py  drg.html  drgep.html  example_input_file.txt  fileID_func.py  fileID_func.py~  genindex.html  github_deploy_key_niemeyer_research_group_pymars.enc  gri30.xml  gri30_test.cti  identify_file_extension.py  ignition_output.txt  index.html  installation.html  (+38 more)
.doctrees/: drg.doctree  drgep.doctree  index.doctree  installation.doctree  pfa.doctree  psr_solver.doctree  psr_theory.doctree  pymars.doctree  reduce_model.doctree  sampling.doctree  sensitivity_analysis.doctree  simulation.doctree  soln2ck.doctree  soln2yaml.doctree  theory.doctree  tools.doctree  usage.doctree
DataFiles/: gri30.inp  inp_convert_test.py
Data_Files/: dme_24_therm.txt  dme_24_tran_dat.txt  grimech.cti  testfile.cti
Input_Data_Files/: test.out
Output_Data_Files/: gri30_converted.cti  h2_v1b_mech_converted.cti  species_data_gri30.hdf5  test_file.cti  trimmed_gri30.cti  trimmed_h2_v1b_mech.cti
_sources/: installation.rst.txt  psr_solver.rst.txt  soln2yaml.rst.txt  theory.rst.txt  usage.rst.txt
_static/: documentation_options.js
conda.recipe/: meta.yaml
devel/: .doctr-files  drg.html  drgep.html  genindex.html  index.html  installation.html  objects.inv  pfa.html  py-modindex.html  pymars.html  reduce_model.html  sampling.html  search.html  searchindex.js  sensitivity_analysis.html  simulation.html  soln2ck.html  soln2cti.html  theory.html  tools.html  usage.html
docs/: conf.py  examples.rst  (+9 more)
(+355 files in other folders)
