[metadata]
license_file = LICENSE

[aliases]
test=pytest

[tool:pytest]
addopts = -vv
filterwarnings =
    ignore::ResourceWarning

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    htmlcov,
    docs,
    pymars/tests,
    setup.py
max-line-length=100

[pep8]
max-line-length=100
